Position fix on mobile

--- a/Style.css
+++ b/Style.css
@@ -721,10 +721,6 @@ footer {
         padding: 5% 0;
     }
 
-    .container {
-        padding-right: 0;
-    }
-
     .col-sm-3 {
         height: 300px;
         opacity: 1.0;
